<resources>
    
    <string name="app_name">DNews</string>
    <string name="developby">DNews Developed by Ghodel</string>
    
    <string name="title_general">Headline</string>
    <string name="title_business">Business</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_health">Health</string>
    <string name="title_sports">Sports</string>
    <string name="title_technology">Technology</string>
    
    <!--UnityAds-->
    <string name="GAME_ID">3994707</string>
    <string name="BANNER_ID">BannerAds</string>
    <string name="INTERSTITIAL_ID">InterstitialAds</string>
    <string name="REWARD_ID">rewardedVideo</string>
    <string name="VIDEO_ID">InterstitialAds</string>
    
    <string name="title_sort">Sort Content</string>
    <string name="title_share">Share Content</string>
    
    <!--Preferences String-->
    <string name="header_title_general">General</string>
    <string name="title_switch_theme">Dark Mode</string>
    <string name="summary_switch_theme">Experience dark mode to keep your eyes clear of screen brightness</string>
    
    <string name="header_title_about_app">About App</string>
    <string name="summary_dev_name">Ghodel</string>
    <string name="title_dev_name">Developer</string>
    <string name="url_developer">https://github.com/ghodel-dev</string>
    <string name="summary_app_version">V.1.0</string>
    <string name="title_app_version">Version</string>
    <string name="summary_share_app">Share with your friends</string>
    <string name="share_app">Share App</string>
    <string name="title_privacy_policy">Privacy Policy</string>
</resources>
