<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/header_title_general">

        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_theme"
            android:summary="@string/summary_switch_theme"
            android:title="@string/title_switch_theme" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/header_title_about_app">
        
        <Preference
            android:key="developer"
            android:summary="@string/summary_dev_name"
            android:title="@string/title_dev_name" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_developer" />
        </Preference>
        
        <Preference
            android:key="app_version"
            android:summary="@string/summary_app_version"
            android:title="@string/title_app_version" />

        <Preference
            android:key="share_app"
            android:summary="@string/summary_share_app"
            android:title="@string/share_app" />

        <Preference 
            android:key="privacy_policy"
            android:title="@string/title_privacy_policy"/>
    </PreferenceCategory>

</PreferenceScreen>
