<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="2"
	android:orientation="horizontal">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:layout_weight="1.0">

		<androidx.cardview.widget.CardView
			android:id="@+id/card_general"
			android:layout_height="150dp"
			android:layout_width="150dp"
			android:clickable="true"
			android:focusable="true"
			android:foreground="?attr/selectableItemBackground"
			android:orientation="vertical"
            android:gravity="center"
			android:layout_margin="3dp"
			app:cardUseCompatPadding="true"
			app:cardCornerRadius="8dp"
			app:cardElevation="3dp">

			<LinearLayout
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:orientation="vertical"
                android:gravity="center"
				android:padding="10dp">
                
                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:tint="@color/color_general"
					android:src="@drawable/ic_general"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/title_general"
                    android:textColor="@color/color_general" />
                
			</LinearLayout>

		</androidx.cardview.widget.CardView>
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_business"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="3dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/ic_business"
                    android:tint="@color/color_business"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_business"
                    android:textColor="@color/color_business"/>

            </LinearLayout>

		</androidx.cardview.widget.CardView>
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_entertainment"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="3dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/ic_entertaiment"
                    android:tint="@color/color_entertainment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_entertainment"
                    android:textColor="@color/color_entertainment"/>

            </LinearLayout>

		</androidx.cardview.widget.CardView>

	</LinearLayout>

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_weight="1.0"
		android:gravity="center_horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_health"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="3dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/ic_health"
                    android:tint="@color/color_health"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_health"
                    android:textColor="@color/color_health"/>

            </LinearLayout>

		</androidx.cardview.widget.CardView>
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_sports"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="3dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/ic_sports"
                    android:tint="@color/color_sports"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_sports"
                    android:textColor="@color/color_sports"/>

            </LinearLayout>

		</androidx.cardview.widget.CardView>
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_technology"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="3dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/ic_technology"
                    android:tint="@color/color_technology"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/title_technology"
                    android:textColor="@color/color_technology"/>

            </LinearLayout>

		</androidx.cardview.widget.CardView>

	</LinearLayout>

</LinearLayout>

